--- a/dist.ini
+++ b/dist.ini
@@ -4,13 +4,21 @@ license = Perl_5
 copyright_holder = simone cesano
 copyright_year   = 2021
 
-version = 0.001
+version = 0.004
 
 [GatherDir]
-
 root = .   
 exclude_match = ~$
 
 [@Filter]
 -bundle = @Basic
 -remove = GatherDir
+
+[AutoPrereqs]
+
+[Prereqs]
+Class::Method::Modifiers = 0
+Minion = 0
+
+[Prereqs / TestRequires ]
+Minion::Backend::SQLite = 0
